<resources>

    <string name="app_name">Book Store</string>

    <!-- Label for overflow menu option that inserts fake book data into the app -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book -->
    <string name="editor_activity_title_new_book">Add a book</string>

    <!-- Label for editor menu option to save book and leave editor -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book -->
    <string name="action_delete">Delete</string>

    <!-- Label for book store category of attributes in the editor -->
    <string name="book_store_overview">Book Store</string>

    <!-- Label for genre information in the editor -->
    <string name="category_genre">Genre</string>

    <!-- Label for supplier information in the editor -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for name field in the editor -->
    <string name="hint_book_name">Name </string>

    <!-- Text hint for price field in the editor -->
    <string name="hint_book_price">Price $ </string>

    <!-- Text hint for quantity field in the editor -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Text hint for price field in the editor -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for quantity field in the editor -->
    <string name="hint_supplier_phone">Supplier Phone</string>

    <!-- Label for dropdown menu option if the book's genre is unknown  -->
    <string name="genre_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the book is action -->
    <string name="genre_action">Action</string>

    <!-- Label for dropdown menu option if the book is comedy -->
    <string name="genre_comedy">Comedy</string>

    <!-- Label for dropdown menu option if the book is romance -->
    <string name="genre_romance">Romance</string>

    <!-- Label for dropdown menu option if the book is fiction -->
    <string name="genre_fiction">Fiction</string>
    <string name="the_table">The book table contain:</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_saved_book_failed">Error saving book</string>
    <string name="editor_saved_book_successful">Book saved</string>
    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>
    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error updating book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>
    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Title text for the empty view, which describes the empty  bookshelves image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit empty here...</string>
    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_activity_title_add_book">Add a Book</string>

    <!-- Label for the books sale's if the book is sale [CHAR LIMIT=20] -->
    <string name="unknown_price">Unknown price</string>
    <string name="sale">Sale</string>
    <string name="editor_call_supplier">Call</string>
    <string name="quantity_change_books_success">Reduce by 1</string>
    <string name="quantity_change_books_failed">No books available</string>
    <string name="reduce_quantity">Reduce quantity</string>
    <string name="increase_quantity">increase quantity</string>
    <string name="quantity">quantity</string>
    <string name="plus_button">+</string>
    <string name="call_supplier">For Orders:</string>
    <string name="phone_save_failed">Saving phone failed!</string>
    <string name="dummy_name">Pride and Prejudice</string>
    <string name="dummy_price">5</string>
    <string name="dummy_quantity">18</string>
    <string name="dummy_supplier">Baker % Taylor</string>
    <string name="dummy_phone">8322757396</string>
    <string name="name_text">Name: </string>
    <string name="price_text">Price $ </string>
    <string name="quantity_text">Quantity: </string>
    <string name="phone">phone</string>
    <string name="order_now">Order Now</string>

</resources>
