<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- book store category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/book_store_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_left_4"
            android:paddingStart="@dimen/padding_left_4">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_quantity"
                android:inputType="number" />

            <RelativeLayout
                android:id="@+id/buttons_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <!-- Quantity minus button field -->

                <ImageButton
                    android:id="@+id/minusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:clickable="true"
                    android:src="@drawable/minus"
                    android:contentDescription="@string/reduce_quantity"
                     />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_quantity"
                    android:layout_width="@dimen/quantity_width"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/minusButton"
                    android:layout_toRightOf="@+id/minusButton"
                    android:gravity="center"
                    android:hint="@string/quantity"
                    android:inputType="number" />

                <!-- Quantity plus button field -->

                <ImageButton
                    android:id="@+id/plusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/edit_quantity"
                    android:layout_toRightOf="@id/edit_quantity"
                    android:backgroundTint="@android:color/white"
                    android:clickable="true"
                    android:contentDescription="@string/increase_quantity"
                    android:focusable="false"
                    android:src="@drawable/plus"
                    />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />


        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_left_4"
            android:paddingStart="@dimen/padding_left_4">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="text" />

            <!-- Supplier phone -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:layout_below="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/phoneButton"
                android:layout_below="@id/edit_supplier_phone"
                android:textColor="@color/black"
                android:text="Order Now"
                android:layout_marginTop="26dp"/>

            <ImageButton
                android:id="@+id/phoneButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:foregroundGravity="center"
                android:layout_below="@+id/edit_supplier_phone"
                android:layout_centerInParent="true"
                android:layout_marginBottom="60dp"
                android:background="#FFFFFF"
                android:clickable="true"
                android:contentDescription="phone"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:src="@drawable/call" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>